# pprof-mbt

./: .gitignore  Cargo.toml  README-ja.md  README.md  flake.nix  go.work  package-lock.json  package.json
.claude/skills/moon-pprof/: SKILL.md
bench/: README.mbt.md  bench.mbt  bench_test.mbt  moon.mod.json
bench-async/: moon.mod.json
bench-async/cmd/aqueue_throughput/: main.mbt  moon.pkg
bench-async/cmd/buffered_io_pipe/: main.mbt  moon.pkg
bench-async/cmd/cond_var_signal/: main.mbt  moon.pkg
bench-async/cmd/gzip_roundtrip/: main.mbt  moon.pkg
bench-async/cmd/http_server_benchmark/: k6_script.js
bench-async/cmd/pause_loop/: main.mbt
bench-async/cmd/semaphore_throughput/: main.mbt  moon.pkg
bench-async/cmd/spawn_wait/: main.mbt
bench-async/cmd/timer_burst/: main.mbt  moon.pkg
bench-x/: moon.mod.json
bench-x/cmd/base64_decode/: main.mbt  moon.pkg
bench-x/cmd/base64_encode/: main.mbt
bench-x/cmd/chacha20/: main.mbt  moon.pkg
bench-x/cmd/decimal_arith/: main.mbt  moon.pkg
bench-x/cmd/encoding_utf8/: main.mbt  moon.pkg
bench-x/cmd/json5_parse/: main.mbt  moon.pkg
bench-x/cmd/md5_hash/: main.mbt
bench-x/cmd/path_normalize/: main.mbt  moon.pkg
bench-x/cmd/plain_datetime_parse/: main.mbt  moon.pkg
bench-x/cmd/sha256_hash/: main.mbt
bench-x/cmd/uuid_parse/: main.mbt  moon.pkg
bench/cmd/bigint_ops/: main.mbt
bench/cmd/bigint_square/: main.mbt  moon.pkg
bench/cmd/deque_ops/: main.mbt  moon.pkg
bench/cmd/hashmap_ops/: main.mbt
bench/cmd/hashmap_string/: main.mbt
bench/cmd/hashmap_update/: main.mbt  moon.pkg
bench/cmd/hashset_ops/: main.mbt  moon.pkg
bench/cmd/json_numbers/: main.mbt  moon.pkg
bench/cmd/json_parse/: main.mbt
bench/cmd/main/: main.mbt  moon.pkg
bench/cmd/priority_queue_ops/: main.mbt  moon.pkg
bench/cmd/regex_match/: main.mbt
bench/cmd/sorted_map_merge/: main.mbt  moon.pkg
bench/cmd/sorted_set_union/: main.mbt  moon.pkg
crates/chrome-trace-to-pprof/: Cargo.toml  README.md
crates/chrome-trace-to-pprof/src/: lib.rs
crates/cpuprofile-to-pprof/: Cargo.toml  README.md
crates/cpuprofile-to-pprof/src/: lib.rs
crates/firefox-to-pprof/: Cargo.toml  README.md  build.rs
crates/firefox-to-pprof/src/: lib.rs  model.rs  resolver.rs  samply.rs
crates/heapprofile-to-pprof/: Cargo.toml  README.md
crates/heapprofile-to-pprof/src/: lib.rs
crates/moonbit-demangle/: Cargo.toml  README.md
crates/moonbit-demangle/src/: lib.rs
crates/moonbit-wasm-host/: Cargo.toml  README.md
crates/moonbit-wasm-host/src/: lib.rs
crates/moonbit-wasm-host/tests/: host_imports.rs
crates/perf-to-pprof/: Cargo.toml  README.md
crates/perf-to-pprof/src/: lib.rs
crates/perf-to-pprof/tests/: parse.rs
crates/perf-to-pprof/tests/fixtures/: many-unknowns.perf-script  no-period.perf-script  sample.perf-script
crates/pprof-stack-formats/: Cargo.toml  README.md
crates/pprof-stack-formats/src/: lib.rs
crates/pprof-to-chrome-trace/: Cargo.toml  README.md
crates/pprof-to-chrome-trace/src/: lib.rs
crates/wasmtime-guest-pprof/: Cargo.toml  README.md
crates/wasmtime-guest-pprof/src/: lib.rs
docs/: profile-formats.md  quick-start.md
docs/samples/: main.wasm
go/demangle/: README.md  demangle.go  demangle_test.go  go.mod
notes/: async-server-alloc-report.md  async_backend_comparison.md  async_crc32_index_loop.diff  async_event_loop_empty_timer.diff  async_http_parser_update_or_default.diff  async_http_server_profile.md  async_investigation.md  async_wasm_run_async_main_shim.diff  backend_comparison.md  bigint_mul_single_limb.diff  core_set_grow_specialized.diff  data_structures_comparison.md  hashmap_grow_specialized.diff  hashset_grow_specialized.diff  http_server.callgrind  json_parse_findings.md  json_skip_double_scan.diff  linked_hash_map_grow_specialized.diff  patch_experiments.md  pprof_mbt_roadmap.md  pprof_mbt_roadmap_v2.md  pr_numbers.md  pr_plan.md  sorted_map_make_tree.diff  sorted_set_create_inline.diff  x_base64_index_loop.diff  x_cross_backend.md  x_cross_backend_baseline.tsv  x_cross_backend_patched.tsv  x_cross_backend_runner.sh  x_encoding_utf8_code_unit_walk.diff  x_investigation.md  x_json5_lex_number_lazy_to_string.diff  x_path_show_write_view.diff  x_uuid_to_string_inplace.diff
notes/async-pr-drafts/: README.md
notes/async-pr-drafts/01-event-loop-empty-timer/: 0001-event-loop-empty-timer.patch  body.md  patch.diff  title.txt
notes/async-pr-drafts/02-gzip-crc32-index-loop/: 0001-gzip-crc32-index-loop.patch  body.md  patch.diff  title.txt
notes/async-pr-drafts/03-wasm-gc-shim/: body.md  title.txt
notes/async-pr-drafts/04-http-update-or-default/: 0001-http-update-or-default.patch  body.md  patch.diff  title.txt
notes/linux-memprofile/: Dockerfile  run.sh
notes/linux-memprofile/workload-loop/: .gitignore  moon.mod.json
notes/pr-drafts/: README.md  STATUS.md  verify.sh
notes/x-pr-drafts/: README.md
runners/: cpuprofile-to-pprof.mjs  patched-mooncakes  patched-toolchain  pprof-demangle.mjs  run-js.mjs  run-wasm-gc.mjs  samply-to-pprof.mjs  wasmtime-to-pprof.mjs
runners/bench-runner/: Cargo.toml
runners/bench-runner/src/: main.rs
runners/http-baseline-server/: Cargo.toml
runners/http-baseline-server/src/: main.rs
runners/lib/: demangle.mjs  firefox-to-pprof.mjs
runners/moon-pprof/: Cargo.toml  README.md
runners/moon-pprof/assets/: native_alloc_hook.c
runners/moon-pprof/src/: cmd_bench.rs  cmd_chrometrace2pprof.rs  cmd_cpuprofile2pprof.rs  cmd_firefox2pprof.rs  cmd_folded2pprof.rs  cmd_heapprofile2pprof.rs  cmd_memprofile.rs  cmd_memprofile_native.rs  cmd_perf2pprof.rs  cmd_pprof2chrometrace.rs  cmd_pprof2folded.rs  cmd_pprof2speedscope.rs  cmd_profile.rs  cmd_speedscope2pprof.rs  cmd_summary.rs  main.rs  wasmtime_config.rs
runners/pprof-summary/: Cargo.toml
runners/pprof-summary/src/: main.rs
runners/v8/: run-js-heap.mjs  run-js.mjs  run-wasm-gc.mjs
runners/wasmtime-runner/: Cargo.toml
runners/wasmtime-runner/proto/: profile.proto
runners/wasmtime-runner/src/: demangle.rs  main.rs  pprof.rs
runners/wzprof-runner/: go.mod  go.sum  main.go
(+61 files in other folders)
