[package]
name = "firefox-to-pprof"
description = "Convert Firefox Profiler 'processed profile' JSON into gzip'd pprof. Used by samply, wasmtime's GuestProfiler, and anything else emitting that format."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["development-tools::profiling"]
keywords = ["profiling", "pprof", "firefox-profiler", "samply", "wasmtime"]
readme = "README.md"

[lib]

[dependencies]
anyhow.workspace = true
flate2.workspace = true
moonbit-demangle.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
prost-build.workspace = true
