[package]
name = "pprof-to-chrome-trace"
description = "Convert pprof CPU profiles into synthetic Chrome trace-event JSON with V8 Profile/ProfileChunk events."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["development-tools::profiling"]
keywords = ["profiling", "pprof", "chrome-trace", "trace-event", "v8"]
readme = "README.md"

[lib]

[dependencies]
anyhow.workspace = true
firefox-to-pprof.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
chrome-trace-to-pprof.workspace = true
flate2.workspace = true
prost.workspace = true
