[package]
name = "wasmtime-guest-pprof"
description = "Drop-in helper that profiles a wasmtime guest with GuestProfiler and writes a pprof file (instead of Firefox JSON)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["development-tools::profiling", "wasm"]
keywords = ["wasmtime", "profiling", "pprof", "wasm"]
readme = "README.md"

[lib]

[dependencies]
anyhow.workspace = true
firefox-to-pprof.workspace = true
serde_json.workspace = true
wasmtime.workspace = true
