[package]
name = "bench-runner"
description = "Drive moonbit benches across (baseline, patched) toolchains and registry-dep snapshots × (wasm, wasm-gc, js, native) and emit a markdown delta table."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
regex = "1"

[[bin]]
name = "bench-runner"
path = "src/main.rs"
