[package]
name = "moon-pprof"
description = "Unified CLI for profiling MoonBit code: profile wasm (wasmtime), summarize / diff pprof files, and drive cross-backend bench runs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
firefox-to-pprof.workspace = true
flate2.workspace = true
moonbit-wasm-host.workspace = true
prost.workspace = true
regex = "1"
wasmtime.workspace = true
wasmtime-guest-pprof.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "moon-pprof"
path = "src/main.rs"
