[package]
name = "moon-pprof"
description = "Unified CLI for profiling MoonBit code: profile wasm (wasmtime), summarize / diff pprof files, and drive cross-backend bench runs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories = ["development-tools::profiling", "command-line-utilities"]
keywords = ["moonbit", "pprof", "profiling", "wasmtime", "samply"]

[dependencies]
anyhow.workspace = true
chrome-trace-to-pprof.workspace = true
clap.workspace = true
cpuprofile-to-pprof.workspace = true
firefox-to-pprof.workspace = true
heapprofile-to-pprof.workspace = true
moonbit-demangle.workspace = true
perf-to-pprof.workspace = true
pprof-to-chrome-trace.workspace = true
pprof-stack-formats.workspace = true
walrus = "0.26"
flate2.workspace = true
moonbit-wasm-host.workspace = true
prost.workspace = true
regex = "1"
serde_json.workspace = true
wasmtime.workspace = true
wasmtime-guest-pprof.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "moon-pprof"
path = "src/main.rs"

[dev-dependencies]
wasmprinter = "0.250.0"
wat = "1.250.0"
