[package]
name = "wasmtime-runner"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wasmtime = { version = "44", features = ["profiling"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "wasmtime-runner"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
