[package]
name = "wasmtime-runner"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wasmtime = { version = "44", features = ["profiling"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"

[build-dependencies]
prost-build = "0.13"

[[bin]]
name = "wasmtime-runner"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
