[package]
name = "wasmtime-runner"
description = "CLI that profiles a MoonBit wasm binary via wasmtime's GuestProfiler and writes pprof directly."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
wasmtime.workspace = true
wasmtime-guest-pprof.workspace = true
moonbit-wasm-host.workspace = true

[[bin]]
name = "wasmtime-runner"
path = "src/main.rs"
